--- a/apps/webapp/src/index.html
+++ b/apps/webapp/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body style="padding:0;margin:0;background-color: #222; color: white; font-family: monospace">
     <div id="root"></div>
   </body>
 </html>
